--- a/src/notebooks/kevin_q2_eda.ipynb
+++ b/src/notebooks/kevin_q2_eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,13 +18,25 @@
    "source": [
     "categories = pd.read_csv('../../data_q2/q2-ucsd-cat-map.csv')\n",
     "consumer = pd.read_parquet('../../data_q2/q2-ucsd-consDF.pqt')\n",
-    "acct = pd.read_parquet(\"../../data_q2/q2-ucsd-acctIDF.pqt\")\n",
-    "transactions = pd.read_parquet(\"../../data_q2/q2-ucsd-trxnDF.pqt\")"
+    "acct = pd.read_parquet('../../data_q2/q2-ucsd-acctDF.pqt')\n",
+    "transactions = pd.read_parquet('../../data_q2/q2-ucsd-trxnDF.pqt')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# categories = pd.read_csv('../../data_q2/q2-ucsd-cat-map.csv')\n",
+    "# consumer = pd.read_parquet('../../data_q2/q2-ucsd-consDF.pqt')\n",
+    "# acct = pd.read_parquet(\"../../data_q2/q2-ucsd-acctIDF.pqt\")\n",
+    "# transactions = pd.read_parquet(\"../../data_q2/q2-ucsd-trxnDF.pqt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +115,7 @@
        "4                 4      2021-10-01         676.0        0.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +224,7 @@
        "4  2021-07-16  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +235,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>category_id</th>\n",
+       "      <th>category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>SELF_TRANSFER</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>EXTERNAL_TRANSFER</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>DEPOSIT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>PAYCHECK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>MISCELLANEOUS</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   category_id           category\n",
+       "0            0      SELF_TRANSFER\n",
+       "1            1  EXTERNAL_TRANSFER\n",
+       "2            2            DEPOSIT\n",
+       "3            3           PAYCHECK\n",
+       "4            4      MISCELLANEOUS"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "categories.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +398,7 @@
        "4              4227                4     CHECKING   2021-07-31   7042.90"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +418,7 @@
        "13009"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -410,33 +500,33 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2021-05-01</td>\n",
-       "      <td>680.0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2022-02-01</td>\n",
+       "      <td>654.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2805.36</td>\n",
-       "      <td>0.245748</td>\n",
-       "      <td>-0.099394</td>\n",
+       "      <td>824.24</td>\n",
+       "      <td>-0.094005</td>\n",
+       "      <td>-0.136727</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>2021-03-01</td>\n",
-       "      <td>734.0</td>\n",
+       "      <td>100</td>\n",
+       "      <td>2021-12-01</td>\n",
+       "      <td>750.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>7667.01</td>\n",
-       "      <td>0.951391</td>\n",
-       "      <td>-0.007780</td>\n",
+       "      <td>2655.47</td>\n",
+       "      <td>1.160470</td>\n",
+       "      <td>-0.102219</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>2021-10-01</td>\n",
-       "      <td>676.0</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>2021-03-01</td>\n",
+       "      <td>756.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>394.55</td>\n",
-       "      <td>0.193478</td>\n",
-       "      <td>-0.144824</td>\n",
+       "      <td>95.25</td>\n",
+       "      <td>1.238874</td>\n",
+       "      <td>-0.150464</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -450,53 +540,53 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14995</th>\n",
-       "      <td>14995</td>\n",
-       "      <td>2022-03-08</td>\n",
-       "      <td>655.0</td>\n",
+       "      <td>9995</td>\n",
+       "      <td>2023-03-02</td>\n",
+       "      <td>578.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-0.080938</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>-1.087132</td>\n",
+       "      <td>-0.152259</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14996</th>\n",
-       "      <td>14996</td>\n",
-       "      <td>2022-01-15</td>\n",
-       "      <td>625.0</td>\n",
+       "      <td>9996</td>\n",
+       "      <td>2023-10-11</td>\n",
+       "      <td>610.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>6821.92</td>\n",
-       "      <td>-0.472962</td>\n",
-       "      <td>-0.023705</td>\n",
+       "      <td>252.67</td>\n",
+       "      <td>-0.668973</td>\n",
+       "      <td>-0.147498</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14997</th>\n",
-       "      <td>14997</td>\n",
-       "      <td>2022-01-31</td>\n",
-       "      <td>688.0</td>\n",
+       "      <td>9997</td>\n",
+       "      <td>2023-05-25</td>\n",
+       "      <td>675.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.350288</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>611.28</td>\n",
+       "      <td>0.180411</td>\n",
+       "      <td>-0.140740</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14998</th>\n",
-       "      <td>14998</td>\n",
-       "      <td>2022-03-08</td>\n",
-       "      <td>722.0</td>\n",
+       "      <td>9998</td>\n",
+       "      <td>2023-11-02</td>\n",
+       "      <td>534.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.794581</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>-862.99</td>\n",
+       "      <td>-1.662099</td>\n",
+       "      <td>-0.168522</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14999</th>\n",
-       "      <td>14999</td>\n",
-       "      <td>2022-02-12</td>\n",
-       "      <td>751.0</td>\n",
+       "      <td>9999</td>\n",
+       "      <td>2023-08-09</td>\n",
+       "      <td>663.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2000.94</td>\n",
-       "      <td>1.173537</td>\n",
-       "      <td>-0.114553</td>\n",
+       "      <td>-9.02</td>\n",
+       "      <td>0.023602</td>\n",
+       "      <td>-0.152429</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -507,33 +597,33 @@
        "      prism_consumer_id evaluation_date  credit_score  DQ_TARGET  balance  \\\n",
        "0                     0      2021-09-01         726.0        0.0   320.37   \n",
        "1                     1      2021-07-01         626.0        0.0  3302.42   \n",
-       "2                     2      2021-05-01         680.0        0.0  2805.36   \n",
-       "3                     3      2021-03-01         734.0        0.0  7667.01   \n",
-       "4                     4      2021-10-01         676.0        0.0   394.55   \n",
+       "2                    10      2022-02-01         654.0        0.0   824.24   \n",
+       "3                   100      2021-12-01         750.0        0.0  2655.47   \n",
+       "4                  1000      2021-03-01         756.0        0.0    95.25   \n",
        "...                 ...             ...           ...        ...      ...   \n",
-       "14995             14995      2022-03-08         655.0        NaN      NaN   \n",
-       "14996             14996      2022-01-15         625.0        NaN  6821.92   \n",
-       "14997             14997      2022-01-31         688.0        NaN      NaN   \n",
-       "14998             14998      2022-03-08         722.0        NaN      NaN   \n",
-       "14999             14999      2022-02-12         751.0        NaN  2000.94   \n",
+       "14995              9995      2023-03-02         578.0        NaN     0.00   \n",
+       "14996              9996      2023-10-11         610.0        NaN   252.67   \n",
+       "14997              9997      2023-05-25         675.0        NaN   611.28   \n",
+       "14998              9998      2023-11-02         534.0        NaN  -862.99   \n",
+       "14999              9999      2023-08-09         663.0        NaN    -9.02   \n",
        "\n",
        "       std_credit  std_balance  \n",
        "0        0.846851    -0.146222  \n",
        "1       -0.459894    -0.090027  \n",
-       "2        0.245748    -0.099394  \n",
-       "3        0.951391    -0.007780  \n",
-       "4        0.193478    -0.144824  \n",
+       "2       -0.094005    -0.136727  \n",
+       "3        1.160470    -0.102219  \n",
+       "4        1.238874    -0.150464  \n",
        "...           ...          ...  \n",
-       "14995   -0.080938          NaN  \n",
-       "14996   -0.472962    -0.023705  \n",
-       "14997    0.350288          NaN  \n",
-       "14998    0.794581          NaN  \n",
-       "14999    1.173537    -0.114553  \n",
+       "14995   -1.087132    -0.152259  \n",
+       "14996   -0.668973    -0.147498  \n",
+       "14997    0.180411    -0.140740  \n",
+       "14998   -1.662099    -0.168522  \n",
+       "14999    0.023602    -0.152429  \n",
        "\n",
        "[15000 rows x 7 columns]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -716,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -816,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -889,7 +979,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
